--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,104 +1,136 @@
 <!DOCTYPE html>
-<html >
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
     <title>Login - GreyShop</title>
     <link rel="stylesheet" href="/static/assets/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
     <link rel="stylesheet" href="/static/assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
     <link rel="stylesheet" href="/static/assets/css/vanilla-zoom.min.css">
+
+
 </head>
+<script src="/static/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
+<script src="/static/assets/js/vanilla-zoom.js"></script>
+<script src="/static/assets/js/theme.js"></script>
+
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo"th:href="@{/}">GreyShop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-               <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" th:href="@{/}">Главная страница</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{catalog}">Каталог</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/contact_us}">Связь с нами</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/login}">Войти</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/signup}">Зарегистрироваться</a></li>
+
+
+<nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
+    <div class="container"><a class="navbar-brand logo" href="/">GreyShop</a>
+        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
+                class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="/">Главная страница</a></li>
+                <li class="nav-item"><a class="nav-link" href="/catalog">Каталог</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contact_us">Связь с нами</a></li>
+                <li class="nav-item"><a class="nav-link" href="/login">Войти</a></li>
+                <li class="nav-item"><a class="nav-link" href="/signup">Зарегистрироваться</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<main class="page login-page">
+    <section class="clean-block clean-form dark">
+        <div class="container">
+            <div class="block-heading">
+                <h2 class="text-info">Log In</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in,
+                    mattis vitae leo.</p>
+            </div>
+            <form action="/signin" method="post">
+                <div class="mb-3">
+                    <label class="form-label" for="login">Name</label>
+                    <input class="form-control item" type="text" id="login" name="login">
+                    <!--                        <ul th:if="${#fields.hasErrors('login')}">-->
+                    <!--                            <li th:errors="*{login}"> </li>-->
+                    <!--                        </ul>-->
+                </div>
+                <div class="mb-3"><label class="form-label" for="password">Password</label>
+                    <input class="form-control" type="password" id="password" name="password">
+                    <!--                        <ul th:if="${#fields.hasErrors('password')}">-->
+                    <!--                            <li th:errors="*{password}"> </li>-->
+                    <!--                        </ul>-->
+                </div>
+                <input type="hidden" id="csrfToken" name="_csrf" value="">
+
+                <button class="btn btn-primary" type="submit">Войти</button>
+                <a class="btn btn-primary" href="/signup">Зарегистрироваться</a>
+            </form>
+        </div>
+    </section>
+</main>
+<footer class="page-footer dark">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <h5>Get started</h5>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Downloads</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-3">
+                <h5>About us</h5>
+                <ul>
+                    <li><a href="#">Company Information</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Reviews</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-3">
+                <h5>Support</h5>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Help desk</a></li>
+                    <li><a href="#">Forums</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-3">
+                <h5>Legal</h5>
+                <ul>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
-    </nav>
-    <main class="page login-page">
-        <section class="clean-block clean-form dark">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">Log In</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                </div>
-                <form th:action="@{/signin}" th:object="${user}" method="post">
-                    <div class="mb-3">
-                        <label class="form-label" for="name">Name</label>
-                        <input class="form-control item" type="text" id="name" th:field="*{login}">
-                        <ul th:if="${#fields.hasErrors('login')}">
-                            <li th:errors="*{login}"> </li>
-                        </ul>
-                    </div>
-                    <div class="mb-3"><label class="form-label" for="password" >Password</label>
-                        <input class="form-control" type="password" id="password" th:field="*{password}">
-                        <ul th:if="${#fields.hasErrors('password')}">
-                            <li th:errors="*{password}"> </li>
-                        </ul>
-                    </div>
-
-                    <button class="btn btn-primary" type="submit">Войти</button>
-                    <a class="btn btn-primary" th:href="@{/signup}" >Зарегистрироваться</a>
-                </form>
-            </div>
-        </section>
-    </main>
-    <footer class="page-footer dark">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
-                    <h5>Get started</h5>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sign up</a></li>
-                        <li><a href="#">Downloads</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>About us</h5>
-                    <ul>
-                        <li><a href="#">Company Information</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Reviews</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>Support</h5>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Help desk</a></li>
-                        <li><a href="#">Forums</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>Legal</h5>
-                    <ul>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <p>© 2023 Copyright Text</p>
-        </div>
-    </footer>
-    <script src="/static/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
-    <script src="/static/assets/js/vanilla-zoom.js"></script>
-    <script src="/static/assets/js/theme.js"></script>
+    </div>
+    <div class="footer-copyright">
+        <p>© 2023 Copyright Text</p>
+    </div>
+</footer>
+<script>
+    // Получаем токен CSRF с сервера
+    fetch("/csrf", {
+        method: "GET",
+        headers: {
+            "Content-Type": "application/x-www-form-urlencoded",
+        },
+    })
+        .then((response) => response.json())
+        .then((data) => {
+            console.log(data.token)
+            const csrfTokenInput = document.getElementById("csrfToken");
+            if (csrfTokenInput) {
+                // Вставляем токен CSRF в скрытое поле формы
+                csrfTokenInput.value = data.token;
+            }
+        })
+        .catch((error) => {
+            console.error("Error fetching CSRF token:", error);
+        });
+</script>
 </body>
 
 </html>
